--- a/tamplates/index.html
+++ b/tamplates/index.html
@@ -1,20 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>sahifa</title>
-</head>
-<body bgcolor="yellow">
-{% if ism %}
-<h1>Salom{{ism}}</h1>
-{% else %}
-<h1>Salom mehmon</h1>
-{% endif %}
+{% extends 'base.html' %}
 
-{% for i in ismlar %}
-<p>{{i}}</p>
+{% block content %}
+<div class="row container">
+  {% for meva in mevalar %}
+  <div class="row">
+    <div class="column">
+        <div class="card" style="width: 18rem;">
+    <img src={{meva.img_url}} class="card-img-top" alt="...">
+    <div class="card-body">
+    <h5 class="card-title">{{meva.title}}</h5>
+    <p class="card-text">{{meva.desc}}</p>
+    <a href="#" class="btn btn-primary">{{meva.price}} so'm</a>
+  </div>
+    </div>
+  </div>
+
+  </div>
 {% endfor %}
+</div>
 
-
-</body>
-</html>
+{% endblock %}
